k8s-files/svc-nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-gke-k8s-svc
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-gke-k8s
